@@ -1,3 +1,9 @@
+2006-07-17  Mark Kettenis  <kettenis@gnu.org>
+
+	* gdb.base/long_long.exp (gdb_test_long_long): Exclude
+	*-*-openbsd* from targets for wich we expect ARM FPA floating
+	point format.
+
 2006-07-17  Nick Roberts  <nickrob@snap.net.nz>
 
 	* gdb.cp/annota3.exp: Expect frame-begin annotation.
